<resources>
    <string name="app_name">Desafio4</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="insert_game">Insert game</string>
    <string name="game_image">Game image</string>
    <string name="sign_out">Sign out</string>
    <string name="search_games">Search Games</string>
    <string name="splash">Splash</string>
    <string name="games">Games</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_game">Edit game</string>
    <string name="fmt_release_year">Release year: %1$d</string>
    <string name="save_game">Save game</string>
    <string name="release_year">Release year</string>
    <string name="description">Description</string>
    <string name="games_list_empty">(empty)</string>
    <string name="sample_text">Sample text</string>
    <string name="action_take_photo">Take a photo</string>
    <string name="action_choose_gallery">Choose from gallery</string>
    <string name="title_select_image">Select image</string>
    <string name="cancel">Cancel</string>
    <string name="remember">Remember</string>
    <string name="required_field">Field must not be empty</string>
    <string name="invalid_email">Please insert a valid email</string>
    <string name="invalid_password">Password and Repeat Password don\'t match</string>
    <string name="register_successfully">User created</string>
</resources>