<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.edit.EditGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="-70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_game_image"
            style="@style/Games.Edit.RoundedImageViewStyle"
            android:background="@color/red"
            android:scaleType="centerCrop"
            android:src="@drawable/layer_ic_camera"
            app:layout_constraintBottom_toTopOf="@id/container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:shapeAppearanceOverlay="@style/Games.Edit.RoundedImageViewShape" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_container_padding"
            android:background="@drawable/shape_login_layout_container"
            android:orientation="vertical"
            android:paddingStart="@dimen/layout_container_padding"
            android:paddingTop="@dimen/layout_image_padding"
            android:paddingEnd="@dimen/layout_container_padding"
            android:paddingBottom="@dimen/layout_container_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_game_image">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Games.TextInputLayout"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name"
                    style="@style/Games.TextInputEditText"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_release_year"
                style="@style/Games.TextInputLayout"
                android:hint="@string/release_year">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_release_year"
                    style="@style/Games.TextInputEditText"
                    android:inputType="numberSigned"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                style="@style/Games.TextInputLayout"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_description"
                    style="@style/Games.TextInputEditText"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_game"
                style="@style/Games.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/save_game" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>